Add static CSS for event calendar and update imports
- Imported the CSS file from @event-calendar/core in static-calendar.js.
- Added static-calendar.css to the package.json for distribution.
- Created static-calendar.css file containing styles for the event calendar.

--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
       "import": "./priv/static/assets/static-calendar.js",
       "require": "./priv/static/assets/static-calendar.js"
     },
-    "./css": "./priv/static/assets/calendar-hooks.css"
+    "./css": "./priv/static/assets/calendar-hooks.css",
+    "./static-css": "./priv/static/assets/static-calendar.css"
   },
   "files": [
     "index.js",
     "priv/static/assets/calendar-hooks.js",
     "priv/static/assets/calendar-hooks.css",
-    "priv/static/assets/static-calendar.js"
+    "priv/static/assets/static-calendar.js",
+    "priv/static/assets/static-calendar.css"
   ],
   "keywords": [
     "phoenix",
