--- a/assets/package.json
+++ b/assets/package.json
@@ -6,9 +6,11 @@
   "license": "ISC",
   "description": "A calendar component for Phoenix applications",
   "dependencies": {
+    "@event-calendar/core": "^4.5.1",
+    "@event-calendar/resource-time-grid": "^3.12.0",
+    "@event-calendar/resource-timeline": "^3.12.0",
     "phoenix": "../deps/phoenix",
     "phoenix_html": "../deps/phoenix_html",
-    "phoenix_live_view": "../deps/phoenix_live_view",
-    "@event-calendar/core": "^4.5.1"
+    "phoenix_live_view": "../deps/phoenix_live_view"
   }
 }
